--- a/index.html
+++ b/index.html
@@ -542,5 +542,5 @@ lg:text-[24px] lg:font-[400] lg:leading-[36px]">
         </form>
     </section>
 </body>
-<script src="../js/script.js"></script>
+<script src="./js/script.js"></script>
 </html>
